--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body {
   background: var(--violet);
   background-image: url("/images/bg-mobile.svg");
   background-repeat: no-repeat;
-  background-position: top;
-  background-size: contain;
+  background-position: center top;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 }
 
 h1 {
@@ -27,10 +29,10 @@ h1 {
 }
 
 .main-container {
-  margin: 2em;
+  margin: 2em 2em 0;
   display: flex;
   flex-flow: column nowrap;
-  align-items: left;
+  align-items: center;
   max-width: 375px;
   height: 100vh;
 }
@@ -68,11 +70,11 @@ h1 {
 }
 
 .text-wrapper > h1 {
-  padding-bottom: 2em;
+  padding-bottom: 1.5em;
 }
 
 .text-wrapper > p {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   width: 95%;
 }
 
@@ -81,7 +83,8 @@ h1 {
   border-radius: 2em;
   padding: 0.2em;
   height: 3em;
-  width: 8em;
+  width: 10em;
+  color: var(--softMagenta);
 }
 
 /* Links style */
@@ -90,20 +93,24 @@ h1 {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 3em;
 }
 
 .links-wrapper > a {
-  padding: 1.5em;
-  width: 2em;
-  height: 2em;
+  display: flex;
+  justify-content: center;
+  margin: 0 0.5em;
+  padding: 0.5em;
+  width: 1em;
+  height: 1em;
+  border: solid #fff 0.1em;
+  border-radius: 50%;
 }
 
 a > img {
-  color: #ffffff;
-  border: solid #fff 0.1em;
-  border-radius: 50%;
+  filter: invert(1);
 }
 
 /* Attribution style */
@@ -113,5 +120,5 @@ a > img {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--softMagenta);
 }
